--- a/css/style.css
+++ b/css/style.css
@@ -5,17 +5,20 @@
     --acqua: #007ea7;
     --light-blue: #00a8e8;
 }
-
-header{
+body{
     background-color: var(--blue-ocean);
+}
+header{
+    background: rgb(0,126,167);
+    background: linear-gradient(180deg, rgba(0,126,167,1) 0%, rgba(0,52,89,1) 100%);
     height: 100px;
 }
 .box-logo{
-    height: 100px;
+    height: 150px;
 }
 .box-logo img{
     height: 100%;
-    width: 400px;
+    width: 500px;
     filter: invert();
     padding-top: 15px;
 }
@@ -27,6 +30,7 @@ header{
 }
 .card{
     border: none;
+    box-shadow: rgba(0, 0, 0, 0.45) 0px 20px 20px -20px , rgba(0, 0, 0, 0.45) 25px 25px 20px -20px;
 }
 .card-head{
     display: flex;
@@ -57,4 +61,10 @@ header{
 }
 h4{
     color: var(--light-blue);
+}
+.img-background{
+    position: absolute;
+    top: 50%;
+    left: 0;
+    width: 200px;
 }
