--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,21 @@
     --acqua: #007ea7;
     --light-blue: #00a8e8;
 }
+
+/* SCROLLBAR CUSTOM */
+::-webkit-scrollbar{
+    width: 10px;
+}
+::-webkit-scrollbar-track {
+    background: #f1f1f1; 
+}
+::-webkit-scrollbar-thumb {
+    background: #888; 
+}
+  ::-webkit-scrollbar-thumb:hover {
+    background: #555; 
+}
+
 body{
     background-color: var(--blue-ocean);
 }
